k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starter-api
  namespace: starter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: starter-api
  template:
    metadata:
      labels:
        app: starter-api
    spec:
      containers:
        - name: api
          image: innothinh/kubesphere-starter-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
