k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: starter-api
  namespace: starter
spec:
  selector:
    app: starter-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
